@@ -45,6 +45,7 @@ Ben Boeckel (mathstuf)
 Ben Elan
 Ben Lu (ayroblu)
 Bernhard Grotz
+bitraid
 blurm
 Branislav Gerazov
 bratekarate
@@ -311,6 +312,7 @@ Taras Halturin (halturin)
 tcftbl
 th1rdey3
 TheMystifyingCharacter
+theorlangur
 Thomas Nemeth
 Tiago
 Tim Schaeffer (Numeromancer)
