@@ -262,6 +262,10 @@
 	Fixed vifm-media script not listing removable drives with udisks marked as
 	non-removable by udisks.
 
+	Fixed incorrectly determining whether a directory is writable on
+	Windows (primarily C:\ could be reported as non-writable).  Thanks to
+	theorlangur and bitraid.
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
